# models/modelsUser/user.go
@@ -1,1 +1,8 @@
 package modelsuser
+
+type User struct {
+	Id       int    `json:"id"`
+	Username string `json:"username"`
+	Password string `json:"password"`
+	Role     string `json:"role"`
+}
