# routes/route.go
@@ -2,6 +2,7 @@ package routes
 
 import (
 	carcontrol "park/controller/carControl"
+	usercontrol "park/controller/userControl"
 
 	"github.com/gofiber/fiber/v2"
 	"github.com/gofiber/websocket/v2"
@@ -19,4 +20,8 @@ func Init(app *fiber.App) {
 	cars.Put("/updatecar/:plate", carcontrol.UpdateCar)
 	cars.Get("/ws/notification", websocket.New(carcontrol.Ws))
 
+	user := app.Group("/api/v1")
+	user.Post("/createuser", usercontrol.Register)
+	user.Post("/login", usercontrol.Login)
+	user.Post("/logout", usercontrol.Logout)
 }
